Shortcuts Design Updated v/1.4 z-index FIXED Modal added
> Shortcuts now appears dynamically at the bottom of the screen instead of static top buttons

Took 6 minutes

--- a/css/main.scss
+++ b/css/main.scss
@@ -60,7 +60,7 @@ body{
         position: fixed;
         transform: translateY(0) scale(1);
         transition: all .2s!important;
-        z-index: 99999;
+        z-index: 9999;
         display: flex;
         justify-content: flex-end;
         align-items: flex-end;
@@ -395,7 +395,7 @@ body{
                     background: var(--primair_color);
                     border: 0;
                     min-height: 0!important;
-                    z-index: 9999;
+                    z-index: 9998;
 
                     i{
                         position: absolute;
@@ -555,7 +555,7 @@ body{
     }
 
     .modal{
-        display: none!important;
+        //display: none!important;
         z-index: 99999;
         min-width: 200px;
         width: 80%;
